minor changes solved problem of not always scrolling down fixed large life bars taking too long to draw

--- a/css.css
+++ b/css.css
@@ -10,6 +10,6 @@
     align-self: center;
     height:500px;
     border:1px solid #ccc;
-    font:16px/26px Georgia, Garamond, Serif;
+    font:16px Georgia, Garamond, Serif;
     overflow: auto;
 }
